Actualizaciones para desplegar backend

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,7 @@
 SECRET_KEY=PASSWD*1234
-PGSQL_HOST=localhost
-PGSQL_USER=postgres
-PGSQL_PASSWORD=andrea
-PGSQL_DATABASE=inventario-tienda
+PGSQL_HOST=ep-ancient-dawn-a4q8hkp1-pooler.us-east-1.aws.neon.tech
+PGSQL_USER=neondb_owner
+PGSQL_PASSWORD=npg_eAGj83dkvSEN
+PGSQL_DATABASE=neondb
+PGSQL_PORT=5432
 
