--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,4 +1,3 @@
-altgraph==0.17.4
 attrs==25.4.0
 blinker==1.9.0
 click==8.3.0
@@ -16,14 +15,10 @@ jsonschema-specifications==2025.9.1
 MarkupSafe==3.0.3
 mistune==3.1.4
 packaging==25.0
-pefile==2023.2.7
 psycopg2==2.9.11
 psycopg2-binary==2.9.11
-pyinstaller==6.16.0
-pyinstaller-hooks-contrib==2025.8
 python-decouple==3.8
 python-dotenv==1.2.1
-pywin32-ctypes==0.2.3
 PyYAML==6.0.3
 referencing==0.37.0
 rpds-py==0.28.0
@@ -32,3 +27,5 @@ six==1.17.0
 SQLAlchemy==2.0.44
 typing_extensions==4.15.0
 Werkzeug==3.1.3
+Flask-JWT-Extended==4.6.0
+bcrypt==4.2.0
